# capitalize_test

./: README.md  pyproject.toml
tests/: test_capitalize.py
